{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 17,
  "lineage": "62b5b589-b7c7-1293-11fb-082fbefc6cb6",
  "resources": [
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/networkInterfaces/cw-centralus-bastion-nic",
            "internal_domain_name_suffix": "wkbxsero3mkufdvolny1og5aea.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.17.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/publicIPAddresses/cw-centralus-bastion-pip",
                "subnet_id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/virtualNetworks/cw-centralus-vnet/subnets/cw-centralus-public-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "mac_address": "00-22-48-46-EC-10",
            "name": "cw-centralus-bastion-nic",
            "private_ip_address": "10.17.2.4",
            "private_ip_addresses": [
              "10.17.2.4"
            ],
            "resource_group_name": "cw-centralus-rg",
            "tags": {
              "environment": "dev",
              "project": "cw"
            },
            "virtual_machine_id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Compute/virtualMachines/cw-centralus-bastion"
          },
          "dependencies": [
            "module.bastion_host.azurerm_public_ip.this",
            "module.resource_group.azurerm_resource_group.this",
            "module.vnet.azurerm_subnet.public",
            "module.vnet.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/publicIPAddresses/cw-centralus-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.176.44.142",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "cw-centralus-bastion-pip",
            "resource_group_name": "cw-centralus-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "cw"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/networkSecurityGroups/cw-centralus-aks-subnet-nsg",
            "location": "centralus",
            "name": "cw-centralus-aks-subnet-nsg",
            "resource_group_name": "cw-centralus-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.17.1.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowBastionToAKS",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "10.17.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev",
              "project": "cw"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_bastion_to_aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.17.1.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/networkSecurityGroups/cw-centralus-aks-subnet-nsg/securityRules/AllowBastionToAKS",
            "name": "AllowBastionToAKS",
            "network_security_group_name": "cw-centralus-aks-subnet-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "cw-centralus-rg",
            "source_address_prefix": "10.17.2.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.vnet.azurerm_network_security_group.aks_nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.17.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/virtualNetworks/cw-centralus-vnet/subnets/cw-centralus-aks-subnet",
            "name": "cw-centralus-aks-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cw-centralus-rg",
            "virtual_network_name": "cw-centralus-vnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.vnet.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.17.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/virtualNetworks/cw-centralus-vnet/subnets/cw-centralus-db-subnet",
            "name": "cw-centralus-db-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cw-centralus-rg",
            "virtual_network_name": "cw-centralus-vnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.vnet.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.17.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/virtualNetworks/cw-centralus-vnet/subnets/cw-centralus-public-subnet",
            "name": "cw-centralus-public-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cw-centralus-rg",
            "virtual_network_name": "cw-centralus-vnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.vnet.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "aks_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/virtualNetworks/cw-centralus-vnet/subnets/cw-centralus-aks-subnet",
            "network_security_group_id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/networkSecurityGroups/cw-centralus-aks-subnet-nsg",
            "subnet_id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/virtualNetworks/cw-centralus-vnet/subnets/cw-centralus-aks-subnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.vnet.azurerm_network_security_group.aks_nsg",
            "module.vnet.azurerm_subnet.aks",
            "module.vnet.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.17.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "127983b2-eb2e-4215-8eae-5b71b71be020",
            "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/virtualNetworks/cw-centralus-vnet",
            "location": "centralus",
            "name": "cw-centralus-vnet",
            "resource_group_name": "cw-centralus-rg",
            "subnet": [
              {
                "address_prefix": "10.17.1.0/24",
                "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/virtualNetworks/cw-centralus-vnet/subnets/cw-centralus-aks-subnet",
                "name": "cw-centralus-aks-subnet",
                "security_group": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/networkSecurityGroups/cw-centralus-aks-subnet-nsg"
              },
              {
                "address_prefix": "10.17.2.0/24",
                "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/virtualNetworks/cw-centralus-vnet/subnets/cw-centralus-public-subnet",
                "name": "cw-centralus-public-subnet"
              },
              {
                "address_prefix": "10.17.3.0/24",
                "id": "/subscriptions/269cd6f8-65b9-4af3-b032-8cb95d5a1b00/resourceGroups/cw-centralus-rg/providers/Microsoft.Network/virtualNetworks/cw-centralus-vnet/subnets/cw-centralus-db-subnet",
                "name": "cw-centralus-db-subnet"
              }
            ],
            "tags": {
              "environment": "dev",
              "project": "cw"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    }
  ]
}